--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
 	</aside>
 	</main>
 	<footer>
-		<p><b>Produced by</b>Rishab shetty</p>
+		<p><b>Produced by:</b> Rishab shetty</p>
 	</footer>
 	<script type="text/javascript" src="./script.js">
 </script>
